Fix overflow

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -9,6 +9,10 @@
   margin-bottom: 0.5rem;
 }
 
+.mobile-facets__list {
+  overflow-y: auto;
+}
+
 @media screen and (min-width: 750px) {
   .facets-container > * + * {
     margin-top: 0;
@@ -1079,7 +1083,6 @@ input.mobile-facets__checkbox {
   .facets-container-drawer .product-count {
     width: 20%;
   }
-
 
   .facets-container-drawer .facets-pill {
     width: 100%;
